# ockam

.github/workflows/: nightly.yml
documentation/guides/rust/embedded/: README.md
documentation/guides/rust/embedded/hardware/: README.md
documentation/guides/rust/embedded/software/: README.md  linux.md  macos.md  windows.md
documentation/guides/rust/get-started/07-hub/: README.md
documentation/guides/rust/get-started/08-forwarding/: README.md
documentation/guides/rust/get-started/09-secure-channel-via-hub/: README.md
examples/rust/get_started/: Cargo.toml
examples/rust/get_started/examples/: 10-routing-to-a-hub-node.rs  11-connecting-devices-using-hub-node-initiator.rs  11-connecting-devices-using-hub-node-responder.rs  12-secure-channel-over-hub-node-initiator.rs  12-secure-channel-over-hub-node-responder.rs  14-streams-initiator.rs  14-streams-responder.rs
implementations/elixir/: build.gradle
implementations/elixir/ockam/ockam_hub/lib/: hub.ex
implementations/elixir/ockam/ockam_vault_software/: mix.exs
implementations/elixir/ockam/ockam_vault_software/lib/: vault_software.ex
implementations/rust/examples/tcp/: Cargo.toml
implementations/rust/examples/tcp/examples/: basic_initiator.rs  basic_responder.rs  echo_initiator.rs  (+6 more)
implementations/rust/ockam/ockam_command/: Cargo.toml
implementations/rust/ockam/ockam_entity/: Cargo.toml
implementations/rust/ockam/ockam_github/: CHANGELOG.md  Cargo.toml
implementations/rust/ockam/ockam_github/src/: access_control.rs  credentials_registry.rs  error.rs  lib.rs  verifier.rs
implementations/rust/ockam/ockam_node/: Cargo.toml
implementations/rust/ockam/ockam_transport/: Cargo.toml
implementations/rust/ockam/ockam_transport/src/: traits.rs  worker.rs
implementations/rust/ockam/ockam_transport_tcp/: Cargo.toml
tools/: README.md
tools/azure/hub/: README.md
tools/docker/builder/: Dockerfile
tools/docker/multiarch/: Dockerfile  README.md  toolchain.cmake.arm64  versions_amd64.sh  versions_arm64.sh
(+85 files in other folders)
